--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "webpack": "^2.2.1"
   },
   "scripts": {
-    "build": "node_modules/.bin/webpack && node_modules/.bin/webpack -p --output-filename=react-to-string.min.js",
+    "installwebpack": "yarn add webpack webpack-dev-server",
+    "build": "installwebpack && node_modules/.bin/webpack && node_modules/.bin/webpack -p --output-filename=react-to-string.min.js",
     "test": "npm run build && node_modules/.bin/jest"
   }
 }
