--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "installwebpack": "yarn add webpack webpack-dev-server",
-    "build": "installwebpack && node_modules/.bin/webpack && node_modules/.bin/webpack -p --output-filename=react-to-string.min.js",
+    "build": "npm run installwebpack && node_modules/.bin/webpack && node_modules/.bin/webpack -p --output-filename=react-to-string.min.js",
     "test": "npm run build && node_modules/.bin/jest"
   }
 }
