--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "babel-preset-react": "^6.22.0",
     "jest": "^18.1.0",
     "react": "^15.4.2",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "react-test-renderer": "^16.13.0"
   },
   "scripts": {
     "installwebpack": "yarn add webpack webpack-dev-server",
