--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,13 @@ jobs:
         key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
         restore-keys: |
           ${{ runner.os }}-yarn-
-          if: steps.yarn-cache.outputs.cache-hit != 'true' || steps.yarn-cache.outputs.cache-hit != 'true'
-          run: yarn install
+    
+    - run: | 
+        yarn install
+      name: Install Dependencies
+      if: steps.yarn-cache.outputs.cache-hit != 'true' || steps.yarn-cache.outputs.cache-hit != 'true'
+
+
+    # if: steps.cache-yarn-cache.outputs.cache-hit != 'true' || steps.cache-node-modules.outputs.cache-hit != 'true'
+    # run: yarn install
       
